# harmony

./: .editorconfig  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .npmrc  .prettierignore  .prettierrc  .prettierrc.json  .stylelintrc  AGENTS.md  Arch-build-fix.md  CHANGELOG.md  DUPLICATE_FINDER_REFACTOR.md  DUPLICATE_WAVEFORM_FIX.md  Makefile  README.md  drizzle.config.ts  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  fix_ubuntu24.sh  index.html  jest.config.js  jest.config.json.bak  justfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  temp_update.js  test.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.opencode/: opencode.db-shm  opencode.db-wal
_assets/: index.eoV0NX2n.css
dist-electron/: main.js  preload.js
docs/: PHASE-4.5-SUMMARY.md  architecture-review-2026-02-16.md  collection.nml  (+25 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  audio_analysis.rs  cue_points.rs  files.rs  folders.rs  mod.rs  playlists.rs  tagger.rs  tracks.rs  traktor.rs
src-tauri/src/libs/: artwork.rs  audio_analysis.rs  audio_metadata.rs  cover.rs  cue_point.rs  database.rs  error.rs  file_ops.rs  folder.rs  library_changes.rs  mod.rs  playlist.rs  track.rs
src-tauri/src/libs/tagger/: mod.rs  orchestrator.rs  scoring.rs  types.rs
src-tauri/src/libs/tagger/bandcamp/: mod.rs  provider.rs  scraper.rs
src-tauri/src/libs/tagger/beatport/: client.rs  mod.rs  parser.rs  provider.rs
src-tauri/src/libs/tagger/traxsource/: mod.rs  provider.rs  scraper.rs
src-tauri/src/libs/traktor/: conflict_resolver.rs  cue_mapper.rs  mapper.rs  mod.rs  nml_parser.rs  nml_types.rs  playlist_sync.rs
(+940 files in other folders)
